--- a/index.html
+++ b/index.html
@@ -1,144 +1,34 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Where to include Javascript</title>
-	
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-
-	
-
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css"/>
+	<title>Javasript Game Pong Game</title>
 </head>
 
 
+<body id="bgcolor">
 
-<body style="background-color: black;position: relative;margin-left: 50px;margin-right: 50px;overflow-y: hidden;">
+	<div id="play" class="playArea">
 
 	
-	<h1 id="gameover" style="font-size: 300px;color: red;"></h1>
-	<div id="test" style="font-size: 40px;position:absolute;color:white;top:-300px"></div>
-	<div id="test2" style="font-size: 40px;position:absolute;color:white;left:300px;top:-300px"></div>
-	<div id="test3" style="font-size: 40px;position:absolute;color:white;left:600px;top:-300px"></div>
-	<div id="test4" style="font-size: 40px;position:absolute;color:white;left:900px;top:-300px"></div>
+		<h1 id="gameover" style="font-size: 300px;color: red;"></h1>
+		<div id="levelInfo" style="font-size: 40px;position:absolute;color:white;left:0px;top:-50px;width:260px;"></div>
+		<div id="touchInfo" style="top:-50px;" class="devInfo"></div>
+		<div id="batInfo" style="top:0px;" class="devInfo"></div>
+		<div id="puckInfo" style="top:50px;" class="devInfo"></div>
+		<div id="safeInfo" style="top:100px;" class="devInfo"></div>
+		<div id="puckTopInfo" style="top:150px;" class="devInfo"></div>
+		<div id="speedInfo" style="top:200px;" class="devInfo"></div>
 
-	<div id="puck" style="font-size: 100px;position:absolute;color: orange;top:300px;left:300px"></div>
-	<div id="bat" style="font-size: 100px;position:absolute;color:white;top:320px"></div>
-	<div style="font-size: 100px;position:absolute;color:white;left: 1800px">|<br>|<br>|<br>|<br>|<br>|</div>
-	
+		<div id="puck" style="font-size: 100px;position:absolute;color: orange;top:300px;left:300px"></div>
+		<div id="bat" style="font-size: 100px;position:absolute;color:white;top:320px"></div>
+		<!-- <div style="font-size: 100px;position:absolute;color:white;left: 1800px">|<br>|<br>|<br>|<br>|<br>|</div> -->
 
-	<script>
+	</div>
 
-		var bat = "|";
-		var batPos = 0;
-		var safe = false;
-		
-		var puck = ".";
-		var puckLeft = 0;
-		var puckPos = 0;
-		// var batRadTop = 0;
-		// var batRadBottom = 0;
-		var elemBat = document.getElementById("bat");	
-		var elemPuck = document.getElementById("puck");	
-
-		document.getElementById("bat").innerHTML = (bat);
-		document.getElementById("puck").innerHTML = (puck);
-		
-	
-		//up arrow
-		document.addEventListener('keydown', function(event) {
-   		if(event.keyCode == 38 && batPos > -300) {	
-			
-        	batPos = batPos - 10;
-			if (batPos >= (puckInt - 40) && batPos <= (puckInt + 40)) {
-					safe = true;
-				} else {
-					safe = false;
-				}
-
-
-			elemBat.style.top = 320 + batPos + "px";		
-			document.getElementById("test").innerHTML = (batPos + " batPos");
-			document.getElementById("test3").innerHTML = (safe);
-    	}
-		//down arrow
-    	else if(event.keyCode == 40 && batPos < 480) {
-			
-        	batPos = batPos + 10;
-			if (batPos >= (puckInt - 40) && batPos <= (puckInt + 40)) {
-					safe = true;
-				} else {
-					safe = false;
-				}
-
-
-			elemBat.style.top = 320 + batPos + "px";
-			document.getElementById("test").innerHTML = (batPos + " batPos");
-			document.getElementById("test3").innerHTML = (safe);
-    	}
-
-		});
-		var i = 0;
-		var x = -1;
-		var upAmount = 0;
-		var puckInt = 0;
-		var speed = 5;
-
-		function myLoop() {         //  create a loop function
-  			setTimeout(function() {   //  call a 3s setTimeout when the loop is called
-				elemPuck.style.left = i + "px";
-				elemPuck.style.top = puckPos + 300 + "px";
-				puckInt = Math.round(puckPos);
-
-				if (batPos >= (puckInt - 50) && batPos <= (puckInt + 50)) {
-					safe = true;
-				} else {
-					safe = false;
-				}
-
-    			switch(i > x && i < 1780) {  
-					case true: if (puckInt > 480 || puckInt < -300) {
-									upAmount = upAmount * -1; x = i; i = i + speed; puckPos = puckPos + upAmount; myLoop(); document.getElementById("test2").innerHTML = (i + " puckLeft"); document.getElementById("test4").innerHTML = (puckInt + " puckPos"); break;
-								} else {
-									x = i; i = i + speed; puckPos = puckPos + upAmount; myLoop(); document.getElementById("test2").innerHTML = (i + " puckLeft"); document.getElementById("test4").innerHTML = (puckInt + " puckPos"); break;
-								}
-					          //  if the counter < 10, call the loop function
-      				case false: if (safe == true && i === 0) {
-									x = i; i = i + speed; puckPos = puckPos + upAmount; myLoop(); document.getElementById("test2").innerHTML = (i + " puckLeft"); document.getElementById("test4").innerHTML = (puckInt + " puckPos");
-									switch(puckInt - batPos) {
-										case -50: upAmount = -1; break;
-										case -40: upAmount = -0.8; break;
-										case -30: upAmount = -0.6; break;
-										case -20: upAmount = -0.4; break;
-										case -10: upAmount = -0.2; break;
-										case 0: upAmount = 0; break;
-									 	case 10: upAmount = 0.2; break;
-										case 20: upAmount = 0.4; break;
-										case 30: upAmount = 0.6; break;
-										case 40: upAmount = 0.8; break;
-										case 50: upAmount = 1; break;
-									} 
-								}
-								else if(puckInt > 480 || puckInt < -300) {
-									upAmount = upAmount * -1; puckPos = puckPos + upAmount; x = i; i = i - speed; myLoop(); document.getElementById("test2").innerHTML = (i + " puckLeft"); document.getElementById("test4").innerHTML = (puckInt + " puckPos"); break;
-								}
-								else {
-									puckPos = puckPos + upAmount; x = i; i = i - speed; myLoop(); document.getElementById("test2").innerHTML = (i + " puckLeft"); document.getElementById("test4").innerHTML = (puckInt + " puckPos"); break;
-								}
-    			}
-				if (i < -50) {
-					alert("GAMEOVER!");
-				}
-				else {
-				}
-				
-  			}, 5)
-		}
-
-		myLoop();
-
-
-
-	</script>
+	<script src="script.js"></script>
 </body>
 </html>
