--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div id="safeInfo" style="top:100px;" class="devInfo"></div>
 		<div id="puckTopInfo" style="top:150px;" class="devInfo"></div>
 		<div id="speedInfo" style="top:200px;" class="devInfo"></div>
+		<div style="position:absolute;top:810px;left:0px;">Beta v1.0, Press 'd' to enable developer info</div>
 
 		<div id="puck" style="font-size: 100px;position:absolute;color: orange;top:300px;left:300px"></div>
 		<div id="bat" style="font-size: 100px;position:absolute;color:white;top:320px"></div>
